# ai-knowledge-graph

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  __main__.py  manifest.py
src/cli/: _main.py  claude.py  commands.py  copilot.py  kiro.py  platforms.py
src/core/: build.py  cluster.py  validate.py
src/core/analyze/: __init__.py  _filters.py  diff.py  god_nodes.py  questions.py  surprises.py
src/extraction/: cache.py  detect.py  extract.py  ingest.py  transcribe.py
src/integrations/: azure_devops.py  azure_extract.py  benchmark.py  hooks.py  serve.py  watch.py
src/output/: __init__.py  _common.py  cypher.py  graphml.py  html.py  json_export.py  obsidian.py  report.py  svg.py  wiki.py
src/skill-kiro/: SKILL.md  add.md  cluster-only.md  explain.md  hooks.md  path.md  pipeline.md  query.md  update.md  watch.md
src/skills/: SKILL.md
src/skills/kiro/: SKILL.md
src/utils/: paths.py  security.py
